# mmocr

./: .gitignore  README.md  pyproject.toml
mmocr/: __init__.py
